--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="css/leaflet.css">			
 		<!-- link to leaflet javascript library-->
 		<script src="js/leaflet-src.js"></script>
+		<!--link to leaflet basemap providers-->
+		<script src="https://unpkg.com/leaflet-providers@latest/leaflet-providers.js"></script>
 		<!--link to the file that contains geoJson data-->
 		<script src="data/mwalk.js" type="text/javascript"> </script> 
 		<script src="data/nationalparks.js" type="text/javascript"> </script> 		
